Remove duplicated display of dice results & ensure data directory is build as well

--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "main": "src/dice.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src --out-dir dist --extensions .js,.jsx --source-maps inline",
+    "build": "babel src --out-dir dist --extensions .js,.jsx --source-maps inline && npm run copy:data",
     "clean": "rm -rf dist",
     "start": "open index.htm",
     "watch": "babel src --out-dir dist --extensions .js,.jsx --source-maps inline --watch",
     "serve": "http-server -p 5173 -c-1 .",
-    "dev": "concurrently \"npm:watch\" \"npm:serve\""
+    "dev": "concurrently \"npm:watch\" \"npm:serve\"",
+    "copy:data": "mkdir -p dist/data && cp -R data/. dist/data"
   },
   "keywords": [],
   "author": "",
